Rgc/test data factory (#83)
* Adds test data factory and item dto builders

* Adds builder for all model DTOs in tests

* Adds ItemBuilder

* Adds OrgUnitBuilder

* Adds RoomBuilder

* Adds ProjectBuilder

* Reorders methods by CRUD